--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuidv4": "^6.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
